Fix overflow issue and update button background color

--- a/saori-portfolio/src/App.css
+++ b/saori-portfolio/src/App.css
@@ -4,7 +4,7 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  overflow-x: hidden;
+  overflow: hidden;
   background-color: rgb(27 26 34);
   color: whitesmoke;
 }
@@ -30,6 +30,13 @@ article {
 
 .form-ai {
   display: flex;
+}
+
+.exp {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .openai-container {
@@ -67,7 +74,7 @@ transition: color 1s ease;
 
 .ai-button {
   width: 125px;;
-  background: linear-gradient(330deg, #bfc8ff 20%, #ffa9a9 100%);
+  background: linear-gradient(330deg, #fff59a 20%, #ffa9a9 100%);
   height: 45px;
   border: none;
 }
@@ -84,7 +91,7 @@ transition: color 1s ease;
 }
 
 .openai-container.collapsed:hover {
-  box-shadow: 0 2px 10px rgba(139, 46, 210, 0.769); /* A subtle shadow to give depth */
+  box-shadow: 0 2px 10px rgba(115, 115, 115, 0.769); /* A subtle shadow to give depth */
 }
 
 
@@ -132,6 +139,14 @@ transition: color 1s ease;
   z-index: 2;
 }
 
+.logo {
+  width: 130px;
+  filter: invert(1) grayscale(1) brightness(2);
+}
+
+.un-logo {
+  width: 130px;
+}
 
 .openai button {
   padding: 10px 15px;
@@ -443,6 +458,7 @@ p {
 }
 .content {
   position: relative;
+  margin-top: 100px;
 }
 
 .ask-about-me-btn {
